Amélioration du traitement des filtres pour corriger  le bug "too much recursion"

--- a/widgets/themes/default/entry.css
+++ b/widgets/themes/default/entry.css
@@ -94,6 +94,10 @@
     height: 16px;
 }
 
+.entry[data-active="0"] {
+    display: none;
+}
+
 .reservation .tools {
     margin: 0;
     opacity: 1;
